NAVBAR-misc-42a21.13: Storage capacity now by default is on in resourcebar. Use option to disable

--- a/design/templates/OpenGame/navbar_resources_flex.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_flex.tpl.html
@@ -36,7 +36,7 @@
           <div id="top_metal">
             {PLANET_METAL_TEXT}
           </div>
-          <!-- IF PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
+          <!-- IF ! PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE -->
           <div>{PLANET_METAL_MAX_TEXT}</div>
           <!-- ENDIF -->
         </div>
@@ -52,7 +52,7 @@
           <div id='top_crystal'>
             {PLANET_CRYSTAL_TEXT}
           </div>
-          <!-- IF PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
+          <!-- IF ! PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE -->
           <div>{PLANET_CRYSTAL_MAX_TEXT}</div>
           <!-- ENDIF -->
         </div>
@@ -68,7 +68,7 @@
 
         <div>
           <div id='top_deuterium'>{PLANET_DEUTERIUM_TEXT}</div>
-          <!-- IF PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
+          <!-- IF ! PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE -->
           <div>{PLANET_DEUTERIUM_MAX_TEXT}</div>
           <!-- ENDIF -->
         </div>
@@ -91,7 +91,7 @@
 
         <div>
           <div>{ENERGY_BALANCE}</div>
-          <!-- IF PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
+          <!-- IF ! PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE -->
           <div>{ENERGY_MAX_NUMBER_TEXT}</div>
           <!-- ENDIF -->
         </div>
