--- a/design/templates/OpenGame/note_list.tpl.html
+++ b/design/templates/OpenGame/note_list.tpl.html
@@ -14,7 +14,7 @@
           <!-- IF note.STICKY && NOTE_FULL_RENDER --><img src="{I_icon_note_pinned_16}" class="icon_1em" />&nbsp;<!-- ENDIF -->
 
           <!-- IF note.GALAXY || note.SYSTEM || note.PLANET -->
-          <a class="link subheader note_coordinates" href="galaxy.php?mode=2&galaxy={note.GALAXY}&system={note.SYSTEM}">[{note.GALAXY}:{note.SYSTEM}:{note.PLANET}] {note.PLANET_TYPE_TEXT_SHORT}</a>
+          <a class="link subheader note_coordinates" href="galaxy.php?mode=2&galaxy={note.GALAXY}&system={note.SYSTEM}">[{note.GALAXY}:{note.SYSTEM}:{note.PLANET}] {note.PLANET_TYPE_TEXT_SHORT}</a>&nbsp;
           <!-- ENDIF -->
           <span class="">{note.TITLE}</span>
         </div>
