--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -542,7 +542,15 @@ input[type=text].coordinate {
   height: 100%;
 }
 .navbar_button_que {
-  position: absolute; width: 100%; height: 100%;left: 0; top: 0; vertical-align: middle; display: flex; align-items: center; justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sn-dialog-confirm {
