NAVBAR-misc-42a23.5: Unified qued buttons code. Simplified design and CSS

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -78,7 +78,7 @@
           <!-- DEFINE $NAVBAR_QUE_HINT = '{L_Research}' -->
           <!-- DEFINE $NAVBAR_QUE_URL = 'buildings.php?mode={D_QUE_RESEARCH}' -->
 
-          <!-- INCLUDE navbar_button_techs -->
+          <!-- INCLUDE navbar_button_queued -->
         <!-- ENDIF -->
 
         <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_PLANET -->
@@ -90,7 +90,7 @@
           <!-- DEFINE $NAVBAR_QUE_HINT = '{TOPNAV_CURRENT_PLANET_NAME}' -->
           <!-- DEFINE $NAVBAR_QUE_URL = 'overview.php' -->
 
-          <!-- INCLUDE navbar_button_structures -->
+          <!-- INCLUDE navbar_button_queued -->
         <!-- ENDIF -->
 
         <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_HANGAR && ! GAME_HANGAR_DISABLED -->
@@ -102,7 +102,7 @@
           <!-- DEFINE $NAVBAR_QUE_HINT = '{L_Shipyard}' -->
           <!-- DEFINE $NAVBAR_QUE_URL = 'buildings.php?mode={D_SUBQUE_FLEET}' -->
 
-          <!-- INCLUDE navbar_button_hangar -->
+          <!-- INCLUDE navbar_button_queued -->
         <!-- ENDIF -->
 
         <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS -->
