--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -503,8 +503,9 @@ input[type=text].coordinate {
 }
 
 #navbar-container-button {
-  justify-content: flex-start;
-  align-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .navbar-container-button-que-empty {
   position: absolute;
@@ -539,15 +540,22 @@ input[type=text].coordinate {
   left: 0;
   top: 0;
 
-  height: 100%;
+  width: 100%;
 }
 .navbar_button_que {
   position: absolute;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
-  vertical-align: middle;
+}
+
+.navbar_button_que_current_unit {
+  flex-grow: 1;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -775,8 +783,6 @@ input[type=text].coordinate {
 .survey_block {
   text-align: left;
   margin: 0 1em;
-  /*padding: 0.6em 0.5em;*/
-  /*border: 1px solid #415680;*/
 }
 .survey_block [survey_id] {
   width: 93%;
@@ -1195,7 +1201,6 @@ input[type=text].coordinate {
   display: inline-block;
   vertical-align: top;
   margin: 0.2em;
-  /*border: 1px solid white;*/
   width: 10em;
   height: 9em;
 }
@@ -2224,8 +2229,6 @@ body:not(.no_border_image) .border_image_small:not(.no_border_image), body:not(.
 [table_title] {
   position: relative;
 
-  /*border: 1px solid blue;*/
-
   margin-top: 6em;
 }
 
@@ -2597,7 +2600,6 @@ body:not(.no_border_image) [table_title]:before {
 .payment_mm_amount, .payment_mm_method, .payment_mm_module {
   display: inline-block;
   width: 13.63636363636em; /*150px;*/
-  /* border: 1px solid white;*/
   margin: 0.3em;
   text-align: center;
   vertical-align: middle;
@@ -2638,14 +2640,12 @@ body:not(.no_border_image) [table_title]:before {
   width: 30%;
   display: inline-block;
   padding: 1%;
-  /*border: 1px solid;*/
 }
 
 .planet-manage-governor-hire-image-container {
   width: 100%;
   display: inline-block;
   position: relative;
-  /*border: 1px solid green;*/
 }
 
 .planet-manage-sectors-container {
@@ -3388,7 +3388,6 @@ td.error_message {
 #tutorial_buttons {
   padding: 0.5em;
   text-align: center;
-  /*border: 1px solid white;*/
 }
 #tutorial_button_next {
   margin-left: auto;
@@ -3529,4 +3528,8 @@ td.error_message {
   flex-shrink: 0;
 
   align-items: center;
+}
+
+[go_url] {
+  cursor: pointer;
 }
