--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -224,7 +224,7 @@
 
 <div id="navbar_refresh" class="button_pseudo" onclick="document.location.reload(true);">{L_topnav_refresh_page}</div>
 
-<!-- IF 1 || .announces && GAME_NEWS_OVERVIEW -->
+<!-- IF .announces && GAME_NEWS_OVERVIEW -->
   <!-- INCLUDE navbar_news -->
 <!-- ENDIF -->
 
