--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -1,18 +1,28 @@
 <!-- NAVBAR START -->
-<!-- IF PLAYER_OPTION_NAVBAR_PLANET_VERTICAL -->
-<!-- DEFINE $NAVBAR_CLASS = 'vertical' -->
+
+<!-- DEFINE $NAVBAR_RESOURCES_RENDER= '{SN_RENDER_NAVBAR_PLANET}' -->
+<!-- DEFINE $NAVBAR_RESOURCES_OLD = '{PLAYER_OPTION_NAVBAR_PLANET_OLD}' -->
+<!-- DEFINE $NAVBAR_RESOURCES_VERTICAL = '{PLAYER_OPTION_NAVBAR_PLANET_VERTICAL}' -->
+<!-- DEFINE $NAVBAR_RESOURCES_HIDE_FLEETS = '{SN_NAVBAR_HIDE_FLEETS}' -->
+<!-- DEFINE $NAVBAR_RESOURCES_ALLY = '{SN_IN_ALLY}' -->
+<!-- DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = '{PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE}' -->
+
+<!-- IF $NAVBAR_RESOURCES_VERTICAL -->
+  <!-- DEFINE $NAVBAR_CLASS = 'vertical' -->
 <!-- ELSE -->
-<!-- DEFINE $NAVBAR_CLASS = '' -->
+  <!-- DEFINE $NAVBAR_CLASS = '' -->
 <!-- ENDIF -->
 
 <!-- IF TUTORIAL_ENABLED -->
   <!-- INCLUDE tutorial -->
 <!-- ENDIF -->
 
+
 <script type="text/javascript">
   PLAYER_OPTION_NAVBAR_PLANET_VERTICAL = Math.intVal('{PLAYER_OPTION_NAVBAR_PLANET_VERTICAL}');
 </script>
 
+<!-- DEFINE $IN_NAVBAR = 1 -->
 <div id="navbar_container" class="{$NAVBAR_CLASS}">
   <div class="header c_c border_image_small" id="navbar">
     <div>
@@ -202,25 +212,18 @@
       </div>
     </div>
 
-    <!-- IF SN_RENDER_NAVBAR_PLANET && ! PLAYER_OPTION_NAVBAR_PLANET_OLD -->
-    <!-- DEFINE $IN_NAVBAR = 1 -->
+    <!-- IF $NAVBAR_RESOURCES_RENDER && ! $NAVBAR_RESOURCES_OLD -->
     <div id="navbar_resbar_wrapper">
       <!-- INCLUDE navbar_resources -->
     </div>
-    <!-- DEFINE $IN_NAVBAR = 0 -->
     <!-- ENDIF -->
   </div>
 
-  <!-- IF SN_RENDER_NAVBAR_PLANET && PLAYER_OPTION_NAVBAR_PLANET_OLD-->
-  <!-- DEFINE $IN_NAVBAR = 1 -->
-  <div>
-    <table class="border_image_small" id="navbar_resources">
+  <!-- IF $NAVBAR_RESOURCES_RENDER && $NAVBAR_RESOURCES_OLD-->
     <!-- INCLUDE navbar_resources -->
-    </table>
-  </div>
-  <!-- DEFINE $IN_NAVBAR = 0 -->
   <!-- ENDIF -->
 </div>
+<!-- DEFINE $IN_NAVBAR = 0 -->
 
 <div id="navbar_refresh" class="button_pseudo" onclick="document.location.reload(true);">{L_topnav_refresh_page}</div>
 
