--- a/design/templates/OpenGame/navbar_resources_horizontal.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_horizontal.tpl.html
@@ -1,12 +1,12 @@
 <tr class="c_l">
-  <th nowrap><!-- IF SN_IN_ALLY -->{L_sys_alliance}<!-- ELSE -->{L_sys_resources}<!-- ENDIF --></th>
+  <th nowrap><!-- IF $NAVBAR_RESOURCES_ALLY -->{L_sys_alliance}<!-- ELSE -->{L_sys_resources}<!-- ENDIF --></th>
   <th>{L_sys_metal}</th>
   <th>{L_sys_crystal}</th>
   <th>{L_sys_deuterium}</th>
-  <!-- IF SN_IN_ALLY -->
+  <!-- IF $NAVBAR_RESOURCES_ALLY -->
   <th>{L_sys_dark_matter}</th>
   <!-- ELSE -->
-  <th<!-- IF ! SN_NAVBAR_HIDE_FLEETS --> colspan="2"<!-- ENDIF -->>{L_sys_energy}</th>
+  <th<!-- IF ! $NAVBAR_RESOURCES_HIDE_FLEETS --> colspan="2"<!-- ENDIF -->>{L_sys_energy}</th>
   <!-- ENDIF -->
 </tr>
 
@@ -15,14 +15,14 @@
   <td id='top_metal'>{PLANET_METAL_TEXT}</td>
   <td id='top_crystal'>{PLANET_CRYSTAL_TEXT}</td>
   <td id='top_deuterium'>{PLANET_DEUTERIUM_TEXT}</td>
-  <!-- IF SN_IN_ALLY -->
+  <!-- IF $NAVBAR_RESOURCES_ALLY -->
   <td id='top_dark_matter'>{DARK_MATTER_TEXT}</td>
   <!-- ELSE -->
   <td>{ENERGY_BALANCE}</td>
   <!-- ENDIF -->
 </tr>
 
-<!-- IF ! SN_IN_ALLY && (! PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE || ! $IN_NAVBAR) -->
+<!-- IF ! $NAVBAR_RESOURCES_ALLY && (! $NAVBAR_RESOURCES_HIDE_STORAGE || ! $IN_NAVBAR) -->
 <tr class="c_r">
   <th class="c_l" nowrap>{L_tech_storage_max}</th>
   <td>{PLANET_METAL_MAX_TEXT}</td>
@@ -32,7 +32,7 @@
 </tr>
 <!-- ENDIF -->
 
-<!-- IF ! SN_NAVBAR_HIDE_FLEETS -->
+<!-- IF ! $NAVBAR_RESOURCES_HIDE_FLEETS -->
 <tr class="c_r">
   <th class="c_l" nowrap>{L_sys_fleet_and}</th>
   <td>{PLANET_METAL_FLEET_TEXT}</td>
