NAVBAR-fix-42a23.9: Fixed typo

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -1,6 +1,6 @@
 <!-- NAVBAR START -->
 
-<!-- DEFINE $NAVBAR_RESOURCES_RENDER= '{SN_RENDER_NAVBAR_PLANET}' -->
+<!-- DEFINE $NAVBAR_RESOURCES_RENDER = '{SN_RENDER_NAVBAR_PLANET}' -->
 <!-- DEFINE $NAVBAR_RESOURCES_OLD = '{PLAYER_OPTION_NAVBAR_PLANET_OLD}' -->
 <!-- DEFINE $NAVBAR_RESOURCES_VERTICAL = '{PLAYER_OPTION_NAVBAR_PLANET_VERTICAL}' -->
 <!-- DEFINE $NAVBAR_RESOURCES_HIDE_FLEETS = '{SN_NAVBAR_HIDE_FLEETS}' -->
