--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -8,9 +8,9 @@
 <!-- DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = '{PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE}' -->
 
 <!-- IF $NAVBAR_RESOURCES_VERTICAL -->
-  <!-- DEFINE $NAVBAR_CLASS = 'vertical' -->
+  <!-- DEFINE $NAVBAR_RESOURCES_CLASS = 'vertical' -->
 <!-- ELSE -->
-  <!-- DEFINE $NAVBAR_CLASS = '' -->
+  <!-- DEFINE $NAVBAR_RESOURCES_CLASS = '' -->
 <!-- ENDIF -->
 
 <!-- IF TUTORIAL_ENABLED -->
@@ -23,7 +23,7 @@
 </script>
 
 <!-- DEFINE $IN_NAVBAR = 1 -->
-<div id="navbar_container" class="{$NAVBAR_CLASS}">
+<div id="navbar_container" class="{$NAVBAR_RESOURCES_CLASS}">
   <div class="header c_c border_image_small" id="navbar">
     <div>
       <!-- IF NAVBAR_PREFIX_BUTTONS -->
