--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -7,6 +7,19 @@
 <!-- DEFINE $NAVBAR_RESOURCES_ALLY = '{SN_IN_ALLY}' -->
 <!-- DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = '{PLAYER_OPTION_NAVBAR_PLANET_DISABLE_STORAGE}' -->
 
+
+
+
+<!-- DEFINE $NAVBAR_RESOURCES_VERTICAL = 1 -->
+<!-- DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = 0 -->
+
+
+
+
+
+
+
+
 <!-- IF $NAVBAR_RESOURCES_VERTICAL -->
   <!-- DEFINE $NAVBAR_RESOURCES_CLASS = 'vertical' -->
 <!-- ELSE -->
@@ -22,9 +35,29 @@
   PLAYER_OPTION_NAVBAR_PLANET_VERTICAL = Math.intVal('{PLAYER_OPTION_NAVBAR_PLANET_VERTICAL}');
 </script>
 
+<div id="navbar_resource_flex_tooltip_pattern">
+  <table class="no_border_image">
+    <tr class="c_c no_select">
+      <th colspan="2">&#123;0&#125;</th>
+    </tr>
+    <tr>
+      <td>{L_tech_storage}</td>
+      <td class="c_r">&#123;1&#125;</td>
+    </tr>
+    <tr>
+      <td>{L_tech_storage_max}</td>
+      <td class="c_r">&#123;2&#125;</td>
+    </tr>
+    <tr>
+      <td>{L_tech_fullness}</td>
+      <td class="c_r">&#123;3&#125;%</td>
+    </tr>
+  </table>
+</div>
+
 <!-- DEFINE $IN_NAVBAR = 1 -->
 <div id="navbar_container" class="{$NAVBAR_RESOURCES_CLASS}">
-  <div class="header c_c border_image_small" id="navbar">
+  <div class="header c_c border_image_small {$NAVBAR_RESOURCES_CLASS}" id="navbar">
     <div>
       <!-- IF NAVBAR_PREFIX_BUTTONS -->
       <div class="contF a50 flexW cell">
@@ -213,9 +246,39 @@
     </div>
 
     <!-- IF $NAVBAR_RESOURCES_RENDER && ! $NAVBAR_RESOURCES_OLD -->
-    <div id="navbar_resbar_wrapper">
       <!-- INCLUDE navbar_resources -->
-    </div>
+
+
+      <!--DEFINE $NAVBAR_RESOURCES_OLD = 1 -->
+<!--
+      default
+      &lt;!&ndash; DEFINE $NAVBAR_RESOURCES_ALLY = 0 &ndash;&gt;
+      &lt;!&ndash; DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = 1 &ndash;&gt;
+      <div>
+        &lt;!&ndash; INCLUDE navbar_resources &ndash;&gt;
+      </div>
+-->
+
+    <!--<div id="navbar_resbar_wrapper">-->
+      <!--&lt;!&ndash; DEFINE $NAVBAR_RESOURCES_ALLY = 0 &ndash;&gt;-->
+      <!--&lt;!&ndash; DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = 0 &ndash;&gt;-->
+
+      <!--&lt;!&ndash; INCLUDE navbar_resources &ndash;&gt;-->
+    <!--</div>-->
+
+    <!--<div id="navbar_resbar_wrapper">-->
+      <!--&lt;!&ndash; DEFINE $NAVBAR_RESOURCES_ALLY = 1 &ndash;&gt;-->
+      <!--&lt;!&ndash; DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = 1 &ndash;&gt;-->
+
+      <!--&lt;!&ndash; INCLUDE navbar_resources &ndash;&gt;-->
+    <!--</div>-->
+
+    <!--<div id="navbar_resbar_wrapper">-->
+      <!--&lt;!&ndash; DEFINE $NAVBAR_RESOURCES_ALLY = 1 &ndash;&gt;-->
+      <!--&lt;!&ndash; DEFINE $NAVBAR_RESOURCES_HIDE_STORAGE = 0 &ndash;&gt;-->
+
+      <!--&lt;!&ndash; INCLUDE navbar_resources &ndash;&gt;-->
+    <!--</div>-->
     <!-- ENDIF -->
   </div>
 
