--- a/design/templates/OpenGame/navbar_resources.tpl.html
+++ b/design/templates/OpenGame/navbar_resources.tpl.html
@@ -2,7 +2,7 @@
 
 <!-- IF $IN_NAVBAR -->
   <!-- IF ! $NAVBAR_RESOURCES_OLD -->
-    <!-- INCLUDE navbar_resources_flex2 -->
+    <!-- INCLUDE navbar_resources_flex -->
   <!-- ELSE -->
     <div>
       <table class="border_image_small" id="navbar_resources">
