--- a/design/templates/OpenGame/navbar_resources_flex.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_flex.tpl.html
@@ -1,6 +1,4 @@
-<div id="navbar_resources_flex" class="navbar_resources_flex header no_select {$NAVBAR_RESOURCES_CLASS}" unselectable="on"
-style=""
->
+<div id="navbar_resources_flex" class="navbar_resources_flex header no_select {$NAVBAR_RESOURCES_CLASS}">
   <div class="navbar_resources_flex_title">
     <!-- IF $NAVBAR_RESOURCES_ALLY -->
     {L_sys_alliance}
@@ -9,213 +7,83 @@ style=""
     <!-- ENDIF -->
   </div>
 
-  <div style="border: 1px solid red; flex-grow: 1">
-    <div class="cell navbar_resources_flex_resource" data-resource="metal" style="display: flex;">
-      <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_metal.png"/></div>
+  <div class="navbar_resbar_flex_wrap2">
+    <div class="navbar_resbar_flex_wrap1">
+      <div class="cell navbar_resources_flex_resource" data-resource="metal">
+        <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_metal.png"/></div>
 
-      <div>
-        <div id="top_metal">
-          {PLANET_METAL_TEXT}
+        <div>
+          <div id="top_metal">
+            {PLANET_METAL_TEXT}
+          </div>
+
+          <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
+          <div>{PLANET_METAL_MAX_TEXT}</div>
+          <!-- ENDIF -->
+
+          <!-- IF ! $NAVBAR_RESOURCES_HIDE_FLEETS -->
+          <div>{PLANET_METAL_FLEET_TEXT}</div>
+          <!-- ENDIF -->
         </div>
+      </div>
 
-        <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
-        <div>{PLANET_METAL_MAX_TEXT}</div>
+      <div class="cell navbar_resources_flex_resource" data-resource="crystal">
+        <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_crystal.png"/></div>
+
+        <div>
+          <div id='top_crystal'>
+            {PLANET_CRYSTAL_TEXT}
+          </div>
+          <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
+          <div>{PLANET_CRYSTAL_MAX_TEXT}</div>
+          <!-- ENDIF -->
+        </div>
+        <!-- IF ! $NAVBAR_RESOURCES_HIDE_FLEETS -->
+        <div>{PLANET_CRYSTAL_FLEET_TEXT}</div>
         <!-- ENDIF -->
+      </div>
+    </div>
+
+    <div class="navbar_resbar_flex_wrap1">
+      <div class="cell navbar_resources_flex_resource" data-resource="deuterium">
+        <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_deuterium.png"/></div>
+
+        <div>
+          <div id='top_deuterium'>
+            {PLANET_DEUTERIUM_TEXT}
+          </div>
+          <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
+          <div>{PLANET_DEUTERIUM_MAX_TEXT}</div>
+          <!-- ENDIF -->
+        </div>
 
         <!-- IF ! $NAVBAR_RESOURCES_HIDE_FLEETS -->
-        <div>{PLANET_METAL_FLEET_TEXT}</div>
+        <div>{PLANET_DEUTERIUM_FLEET_TEXT}</div>
         <!-- ENDIF -->
       </div>
-    </div>
-  </div>
 
-  <div style="border: 1px solid red; flex-grow: 1">
-    <div class="cell navbar_resources_flex_resource" data-resource="crystal" style="display: flex;">
-      <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_crystal.png"/></div>
+      <!-- IF ! $NAVBAR_RESOURCES_ALLY -->
+      <div class="cell navbar_resources_flex_resource" data-resource="energy">
+        <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_energy.png"/></div>
 
-      <div>
-        <div id='top_crystal'>
-          {PLANET_CRYSTAL_TEXT}
+        <div>
+          <div>{ENERGY_BALANCE}</div>
+          <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
+          <div>{ENERGY_MAX_NUMBER_TEXT}</div>
+          <!-- ENDIF -->
         </div>
-        <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
-        <div>{PLANET_CRYSTAL_MAX_TEXT}</div>
-        <!-- ENDIF -->
       </div>
-      <!-- IF ! $NAVBAR_RESOURCES_HIDE_FLEETS -->
-      <div>{PLANET_CRYSTAL_FLEET_TEXT}</div>
+      <!-- ELSE -->
+      <div class="cell navbar_resources_flex_resource">
+        <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_dark_matter.png"/></div>
+
+        <div>
+          <div id='top_dark_matter'>
+            <!-- IF DARK_MATTER_TEXT -->{DARK_MATTER_TEXT}<!-- ELSE -->0<!-- ENDIF -->
+          </div>
+        </div>
+      </div>
       <!-- ENDIF -->
     </div>
   </div>
-
-  <div style="border: 1px solid red; flex-grow: 1">
-    <div class="cell navbar_resources_flex_resource" data-resource="deuterium" style="display: flex;">
-      <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_deuterium.png"/></div>
-
-      <div>
-        <div id='top_deuterium'>
-          {PLANET_DEUTERIUM_TEXT}
-        </div>
-        <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
-        <div>{PLANET_DEUTERIUM_MAX_TEXT}</div>
-        <!-- ENDIF -->
-      </div>
-
-      <!-- IF ! $NAVBAR_RESOURCES_HIDE_FLEETS -->
-      <div>{PLANET_DEUTERIUM_FLEET_TEXT}</div>
-      <!-- ENDIF -->
-    </div>
-  </div>
-
-  <div style="border: 1px solid red; flex-grow: 1;">
-    <!-- IF $NAVBAR_RESOURCES_ALLY -->
-    <div class="cell navbar_resources_flex_resource" style="display: flex;">
-      <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_dark_matter.png"/></div>
-
-      <div>
-        <div id='top_dark_matter'>
-          <!-- IF DARK_MATTER_TEXT -->{DARK_MATTER_TEXT}<!-- ELSE -->0<!-- ENDIF -->
-        </div>
-      </div>
-    </div>
-    <!-- ELSE -->
-    <div class="cell navbar_resources_flex_resource" data-resource="energy" style="display: flex; flex-grow: 1">
-      <div class="navbar_resource_image"><img class="image_close" src="design/images/icon_energy.png"/></div>
-
-      <div style="flex-grow: 1">
-        <div style="flex-grow: 1">{ENERGY_BALANCE}</div>
-        <!-- IF ! $NAVBAR_RESOURCES_HIDE_STORAGE -->
-        <div>{ENERGY_MAX_NUMBER_TEXT}</div>
-        <!-- ENDIF -->
-      </div>
-    </div>
-    <!-- ENDIF -->
-  </div>
-
-  <!--<div class="" style="border: 1px solid red">-->
-
-    <!--<div class="flexible_wrapper wrap" style="flex-shrink: 100;">-->
-
-      <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="metal">-->
-        <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_metal.png" /></div>-->
-        <!--<div>tttttttttttttt</div>-->
-        <!--&lt;!&ndash;<div id="top_metal">&ndash;&gt;-->
-          <!--&lt;!&ndash;<span>{PLANET_METAL_TEXT}</span>&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-          <!--&lt;!&ndash;<div id="top_metal">&ndash;&gt;-->
-            <!--&lt;!&ndash;{PLANET_METAL_TEXT}&ndash;&gt;-->
-          <!--&lt;!&ndash;</div>&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_STORAGE &ndash;&gt;&ndash;&gt;-->
-          <!--&lt;!&ndash;<div>{PLANET_METAL_MAX_TEXT}</div>&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;-->
-
-        <!--&lt;!&ndash;&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_FLEETS &ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;<div>{PLANET_METAL_FLEET_TEXT}</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;-->
-      <!--</div>-->
-
-      <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="crystal">-->
-        <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_crystal.png"/></div>-->
-        <!--<div>tttttttttttttt</div>-->
-
-        <!--&lt;!&ndash;<div>&ndash;&gt;-->
-          <!--&lt;!&ndash;<div id='top_crystal'>&ndash;&gt;-->
-            <!--&lt;!&ndash;{PLANET_CRYSTAL_TEXT}&ndash;&gt;-->
-          <!--&lt;!&ndash;</div>&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_STORAGE &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash;<div>{PLANET_CRYSTAL_MAX_TEXT}</div>&ndash;&gt;&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_FLEETS &ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;<div>{PLANET_CRYSTAL_FLEET_TEXT}</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;-->
-      <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="flexible_wrapper">-->
-      <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="deuterium">-->
-        <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_deuterium.png" /></div>-->
-
-        <!--&lt;!&ndash;<div>&ndash;&gt;-->
-          <!--&lt;!&ndash;<div id='top_deuterium'>&ndash;&gt;-->
-            <!--&lt;!&ndash;{PLANET_DEUTERIUM_TEXT}&ndash;&gt;-->
-          <!--&lt;!&ndash;</div>&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_STORAGE &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash;<div>{PLANET_DEUTERIUM_MAX_TEXT}</div>&ndash;&gt;&ndash;&gt;-->
-          <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-        <!--&lt;!&ndash;&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_FLEETS &ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;<div>{PLANET_DEUTERIUM_FLEET_TEXT}</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;-->
-      <!--</div>-->
-
-      <!--&lt;!&ndash; IF $NAVBAR_RESOURCES_ALLY &ndash;&gt;-->
-      <!--<div class="cell navbar_resources_flex_resource flexible_wrapper">-->
-        <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_dark_matter.png"/></div>-->
-
-        <!--&lt;!&ndash;<div>&ndash;&gt;-->
-          <!--&lt;!&ndash;<div id='top_dark_matter'>&ndash;&gt;-->
-            <!--&lt;!&ndash;&lt;!&ndash; IF DARK_MATTER_TEXT &ndash;&gt;&ndash;&gt;-->
-            <!--&lt;!&ndash;{DARK_MATTER_TEXT}&ndash;&gt;-->
-            <!--&lt;!&ndash;&lt;!&ndash; ELSE &ndash;&gt;&ndash;&gt;-->
-            <!--&lt;!&ndash;0&ndash;&gt;-->
-            <!--&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;-->
-          <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-      <!--</div>-->
-      <!--&lt;!&ndash; ELSE &ndash;&gt;-->
-      <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="energy">-->
-        <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_energy.png"/></div>-->
-
-        <!--&lt;!&ndash;<div>&ndash;&gt;-->
-        <!--&lt;!&ndash;<div>{ENERGY_BALANCE}</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_STORAGE &ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;<div>{ENERGY_MAX_NUMBER_TEXT}</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;&lt;!&ndash; ENDIF &ndash;&gt;&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-      <!--</div>-->
-      <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
-    <!--</div>-->
-
-
-
-
-
-
-
-
-    <!--<div class="flexible_wrapper">-->
-      <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="metal">-->
-        <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_dark_matter.png"/></div>-->
-        <!--<div>-->
-        <!--<div id="top_metal">-->
-        <!--{PLANET_METAL_TEXT}-->
-        <!--</div>-->
-        <!--&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_STORAGE &ndash;&gt;-->
-        <!--<div>{PLANET_METAL_MAX_TEXT}</div>-->
-        <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="crystal">-->
-        <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_dark_matter.png"/></div>-->
-        <!--<div id="top_metal">-->
-          <!--{PLANET_METAL_TEXT}-->
-        <!--</div>-->
-        <!--&lt;!&ndash; IF ! $NAVBAR_RESOURCES_HIDE_STORAGE &ndash;&gt;-->
-        <!--<div>{PLANET_METAL_MAX_TEXT}</div>-->
-        <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-
-  <!--<div class="flexible_wrapper">-->
-    <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="metal">-->
-      <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_dark_matter.png"/></div>-->
-    <!--</div>-->
-    <!--<div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="crystal">-->
-      <!--<div class="navbar_resource_image"><img class="image_close" src="design/images/icon_dark_matter.png"/></div>-->
-    <!--</div>-->
-  <!--</div>-->
 </div>
